--- a/index.html
+++ b/index.html
@@ -14,8 +14,55 @@
     <title>Hello, world!</title>
 </head>
 
-<body>
-    <h1>Hello, world!</h1>
+<body class="bg-light">
+
+
+
+    <div class="bg-dark bg-opacity-10 d-md-flex justify-content-md-evenly align-items-center">
+        <div class="d-md-block d-flex justify-content-center">
+            <a href="./index.html">
+                <img src="./logo.png" alt="logo" width="75">
+            </a>
+        </div>
+        <div class="w-50 mx-5 mx-md-0">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
