working showing current state in ui

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             <button class="btn btn-outline-success" type="submit" onclick="fetchCurrentWeather()">Search</button>
         </div>
     </div>
-    <div class="d-flex justify-content-center align-items-center">
+    <div class="d-flex justify-content-center flex-column align-items-center">
 
-        <img src="./logo.png" width="500px" id="currentWeatherImg" alt="">
+        <img src="./logo.png" width="100" id="currentWeatherImg" alt="">
+        <h1 id="conditionText"></h1>
 
     </div>
     <script src="./script.js"></script>
