result ui updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> -->
     <title>Weather -To Know Current Weather Condition</title>
 </head>
 
@@ -19,7 +19,7 @@
         class="bg-dark bg-opacity-10 d-flex justify-content-lg-evenly flex-lg-row flex-column align-items-center gap-lg-0 gap-5">
         <div class="d-md-block d-flex justify-content-center">
             <a href="./index.html">
-                <img src="./logo.png" alt="logo" width="75">
+                <img src="./logo.png" id="logoImg" alt="logo" width="75">
             </a>
         </div>
         <div class="d-flex flex-column flex-lg-row gap-2 gap-lg-0 mx-2">
@@ -30,8 +30,8 @@
     </div>
     <div class="d-flex justify-content-center flex-column align-items-center">
 
-        <img src="./logo.png" width="100" id="currentWeatherImg" alt="">
-        <h1 id="conditionText"></h1>
+        <img src="" width="100" id="currentWeatherImg" alt="">
+        <h1 id="conditionText">Search for Your city name to see the aqurate result</h1>
 
     </div>
     <script src="./script.js"></script>
